add description to package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webapp-nodejs-es6",
   "version": "1.0.0",
-  "description": "",
+  "description": "Sample nodejs app with es2015",
   "main": "index.js",
   "scripts": {
     "start": "node ./app/index.js"
@@ -10,8 +10,6 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.5.1",
-    "babel-plugin-transform-flow-strip-types": "^6.5.0",
-    "babel-preset-es2015": "^6.5.0",
     "babel-preset-es2015-node5": "^1.1.2",
     "babel-preset-stage-0": "^6.5.0",
     "gulp": "^3.9.1",
