--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
+    "mongoose": "^4.4.3",
     "morgan": "^1.6.1",
     "multer": "^1.1.0"
   }
