--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "babel-preset-es2015-node5": "^1.1.2",
     "babel-preset-stage-0": "^6.5.0",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-jade": "^1.1.0",
     "gulp-jshint": "^2.0.0",
     "gulp-live-server": "0.0.29",
     "gulp-shell": "^0.5.2",
     "gulp-watch": "^4.3.5",
+    "jade": "^1.11.0",
     "jshint": "^2.9.1",
     "rimraf": "^2.5.1",
     "run-sequence": "^1.1.5"
