--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-watch": "^4.3.5",
     "jade": "^1.11.0",
     "jshint": "^2.9.1",
+    "jspm": "^0.16.29",
     "less": "^2.6.0",
     "rimraf": "^2.5.1",
     "run-sequence": "^1.1.5"
@@ -32,5 +33,21 @@
     "mongoose": "^4.4.3",
     "morgan": "^1.6.1",
     "multer": "^1.1.0"
+  },
+  "jspm": {
+    "directories": {
+      "baseURL": "public"
+    },
+    "dependencies": {
+      "css": "github:systemjs/plugin-css@^0.1.20",
+      "jquery": "npm:jquery@^2.2.1",
+      "json": "github:systemjs/plugin-json@^0.1.0",
+      "text": "github:systemjs/plugin-text@^0.0.5"
+    },
+    "devDependencies": {
+      "babel": "npm:babel-core@^5.8.24",
+      "babel-runtime": "npm:babel-runtime@^5.8.24",
+      "core-js": "npm:core-js@^1.1.4"
+    }
   }
 }
