--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
       "baseURL": "public"
     },
     "dependencies": {
+      "bootstrap": "github:twbs/bootstrap@^3.3.6",
       "css": "github:systemjs/plugin-css@^0.1.20",
       "jquery": "npm:jquery@^2.2.1",
       "json": "github:systemjs/plugin-json@^0.1.0",
-      "text": "github:systemjs/plugin-text@^0.0.5"
+      "text": "github:systemjs/plugin-text@^0.0.5",
+      "twbs/bootstrap": "github:twbs/bootstrap@4.0.0-alpha"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.8.24",
