remove less and add sass

--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
     "gulp-babel": "^6.1.2",
     "gulp-jade": "^1.1.0",
     "gulp-jshint": "^2.0.0",
-    "gulp-less": "^3.0.5",
     "gulp-live-server": "0.0.29",
-    "gulp-shell": "^0.5.2",
+    "gulp-sass": "^2.2.0",
     "jade": "^1.11.0",
     "jshint": "^2.9.1",
     "jspm": "^0.16.29",
