return to boostrap 3.3.6

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webapp-nodejs-es6",
+  "name": "Posaklivko",
   "version": "1.0.0",
   "description": "Sample nodejs app with es2015",
   "main": "index.js",
