--- a/package.json
+++ b/package.json
@@ -10,17 +10,19 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.5.1",
+    "babel-eslint": "^6.0.0-beta.6",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015-node5": "^1.1.2",
-    "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-1": "^6.5.0",
     "del": "^2.2.0",
+    "eslint": "^2.4.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-eslint": "^2.0.0",
     "gulp-jade": "^1.1.0",
-    "gulp-jshint": "^2.0.0",
     "gulp-live-server": "0.0.29",
     "gulp-sass": "^2.2.0",
     "jade": "^1.11.0",
-    "jshint": "^2.9.1",
     "jspm": "^0.16.29",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.5",
