--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "posaklivko",
-  "version": "0.7.3",
+  "version": "0.7.5",
   "description": "Project architecture with basic configurations that helps developers to build modern web applications with NodeJS using ECMAScript2015",
   "main": "index.js",
   "scripts": {
@@ -21,6 +21,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015-node5": "^1.1.2",
     "babel-preset-stage-1": "^6.5.0",
+    "browser-sync": "^2.11.2",
     "del": "^2.2.0",
     "eslint": "^2.4.0",
     "gulp": "^3.9.1",
